Fix: Carousel margins and gaps

--- a/components/AllTransactionsCarousel/AllTransactionsCarousel.module.scss
+++ b/components/AllTransactionsCarousel/AllTransactionsCarousel.module.scss
@@ -7,21 +7,20 @@
   align-self: stretch;
   & > * {
     height: 100%;
-    padding: $gutter;
   }
 }
 
 .navigationColumn {
   display: flex;
   justify-content: flex-start;
-  margin-top: $gutter;
+  margin-top: $gutter * 1.5;
   margin-bottom: 0;
   @include breakpoint-up(sm) {
     justify-content: flex-end;
-    margin-top: 0;
     margin-bottom: $paragraphs-margin-bottom;
   }
 }
+
 .button {
   margin-right: auto;
   @include breakpoint-up(md) {
